Fix github banner overlapping menu, add release banner

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -184,3 +184,7 @@ p.copyright {
     margin: 15px 0 0;
     color: #FFF;
 }
+
+.version-banner {
+   background-color: #ff7f00;
+}
